delete reject status in invite
