# internal/api/rest/router.go
@@ -28,7 +28,7 @@ type Handlers interface {
 	GetCityBySlug(w http.ResponseWriter, r *http.Request)
 	ListGovs(w http.ResponseWriter, r *http.Request)
 	CreateInvite(w http.ResponseWriter, r *http.Request)
-	AnswerToInvite(w http.ResponseWriter, r *http.Request)
+	AcceptInvite(w http.ResponseWriter, r *http.Request)
 	GetGov(w http.ResponseWriter, r *http.Request)
 	DeleteGov(w http.ResponseWriter, r *http.Request)
 	InviteMayor(w http.ResponseWriter, r *http.Request)
@@ -38,12 +38,15 @@ type Handlers interface {
 	RefuseOwnGov(w http.ResponseWriter, r *http.Request)
 }
 
-func (s *Service) Api(ctx context.Context, cfg config.Config, h Handlers) {
+func (s *Service) Router(ctx context.Context, cfg config.Config, h Handlers) {
 	svc := mdlv.ServiceGrant(enum.CitiesSVC, cfg.JWT.Service.SecretKey)
 	auth := mdlv.Auth(meta.UserCtxKey, cfg.JWT.User.AccessToken.SecretKey)
 	sysadmin := mdlv.RoleGrant(meta.UserCtxKey, map[string]bool{
 		roles.Admin:     true,
 		roles.SuperUser: true,
+	})
+	user := mdlv.RoleGrant(meta.UserCtxKey, map[string]bool{
+		roles.User: true,
 	})
 
 	s.router.Route("/cities-svc/", func(r chi.Router) {
@@ -76,19 +79,19 @@ func (s *Service) Api(ctx context.Context, cfg config.Config, h Handlers) {
 					r.Get("/", h.GetCity)
 
 					r.With(auth).Put("/", h.UpdateCity)
-					r.With(auth).Put("/status", h.UpdateCityStatus)
+					r.With(auth, sysadmin).Put("/status", h.UpdateCityStatus)
 
 					r.Route("/govs", func(r chi.Router) {
 						r.Get("/", h.ListGovs)
 
 						r.With(auth).Route("/invite", func(r chi.Router) {
-							r.Post("/", h.CreateInvite)
-							r.With(auth, sysadmin).Post("/mayor", h.InviteMayor)
+							r.With(user).Post("/", h.CreateInvite)
+							r.With(auth).Post("/mayor", h.InviteMayor)
 
-							r.Post("/{token}", h.AnswerToInvite)
+							r.With(user).Post("/{token}", h.AcceptInvite)
 						})
 
-						r.With(auth).Route("/me", func(r chi.Router) {
+						r.With(auth, user).Route("/me", func(r chi.Router) {
 							r.Get("/", h.GetOwnGov)
 							r.Put("/", h.UpdateOwnGov)
 							r.Delete("/", h.RefuseOwnGov)
@@ -96,7 +99,7 @@ func (s *Service) Api(ctx context.Context, cfg config.Config, h Handlers) {
 
 						r.Route("/{user_id}", func(r chi.Router) {
 							r.Get("/", h.GetGov)
-							r.With(auth).Delete("/", h.DeleteGov)
+							r.With(auth, user).Delete("/", h.DeleteGov)
 						})
 					})
 				})
