# resources/model_answer_to_invite.go
@@ -1,158 +1,0 @@
-/*
-cities-svc API
-
-API documentation for cities-svc
-
-API version: 0.1.0
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package resources
-
-import (
-	"encoding/json"
-	"bytes"
-	"fmt"
-)
-
-// checks if the AnswerToInvite type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &AnswerToInvite{}
-
-// AnswerToInvite struct for AnswerToInvite
-type AnswerToInvite struct {
-	Data AnswerToInviteData `json:"data"`
-}
-
-type _AnswerToInvite AnswerToInvite
-
-// NewAnswerToInvite instantiates a new AnswerToInvite object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewAnswerToInvite(data AnswerToInviteData) *AnswerToInvite {
-	this := AnswerToInvite{}
-	this.Data = data
-	return &this
-}
-
-// NewAnswerToInviteWithDefaults instantiates a new AnswerToInvite object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewAnswerToInviteWithDefaults() *AnswerToInvite {
-	this := AnswerToInvite{}
-	return &this
-}
-
-// GetData returns the Data field value
-func (o *AnswerToInvite) GetData() AnswerToInviteData {
-	if o == nil {
-		var ret AnswerToInviteData
-		return ret
-	}
-
-	return o.Data
-}
-
-// GetDataOk returns a tuple with the Data field value
-// and a boolean to check if the value has been set.
-func (o *AnswerToInvite) GetDataOk() (*AnswerToInviteData, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Data, true
-}
-
-// SetData sets field value
-func (o *AnswerToInvite) SetData(v AnswerToInviteData) {
-	o.Data = v
-}
-
-func (o AnswerToInvite) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o AnswerToInvite) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	toSerialize["data"] = o.Data
-	return toSerialize, nil
-}
-
-func (o *AnswerToInvite) UnmarshalJSON(data []byte) (err error) {
-	// This validates that all required properties are included in the JSON object
-	// by unmarshalling the object into a generic map with string keys and checking
-	// that every required field exists as a key in the generic map.
-	requiredProperties := []string{
-		"data",
-	}
-
-	allProperties := make(map[string]interface{})
-
-	err = json.Unmarshal(data, &allProperties)
-
-	if err != nil {
-		return err;
-	}
-
-	for _, requiredProperty := range(requiredProperties) {
-		if _, exists := allProperties[requiredProperty]; !exists {
-			return fmt.Errorf("no value given for required property %v", requiredProperty)
-		}
-	}
-
-	varAnswerToInvite := _AnswerToInvite{}
-
-	decoder := json.NewDecoder(bytes.NewReader(data))
-	decoder.DisallowUnknownFields()
-	err = decoder.Decode(&varAnswerToInvite)
-
-	if err != nil {
-		return err
-	}
-
-	*o = AnswerToInvite(varAnswerToInvite)
-
-	return err
-}
-
-type NullableAnswerToInvite struct {
-	value *AnswerToInvite
-	isSet bool
-}
-
-func (v NullableAnswerToInvite) Get() *AnswerToInvite {
-	return v.value
-}
-
-func (v *NullableAnswerToInvite) Set(val *AnswerToInvite) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableAnswerToInvite) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableAnswerToInvite) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableAnswerToInvite(val *AnswerToInvite) *NullableAnswerToInvite {
-	return &NullableAnswerToInvite{value: val, isSet: true}
-}
-
-func (v NullableAnswerToInvite) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableAnswerToInvite) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
