# resources/model_answer_to_invite_data.go
@@ -1,215 +1,0 @@
-/*
-cities-svc API
-
-API documentation for cities-svc
-
-API version: 0.1.0
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package resources
-
-import (
-	"encoding/json"
-	"bytes"
-	"fmt"
-)
-
-// checks if the AnswerToInviteData type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &AnswerToInviteData{}
-
-// AnswerToInviteData struct for AnswerToInviteData
-type AnswerToInviteData struct {
-	// invite id
-	Id string `json:"id"`
-	Type string `json:"type"`
-	Attributes AnswerToInviteDataAttributes `json:"attributes"`
-}
-
-type _AnswerToInviteData AnswerToInviteData
-
-// NewAnswerToInviteData instantiates a new AnswerToInviteData object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewAnswerToInviteData(id string, type_ string, attributes AnswerToInviteDataAttributes) *AnswerToInviteData {
-	this := AnswerToInviteData{}
-	this.Id = id
-	this.Type = type_
-	this.Attributes = attributes
-	return &this
-}
-
-// NewAnswerToInviteDataWithDefaults instantiates a new AnswerToInviteData object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewAnswerToInviteDataWithDefaults() *AnswerToInviteData {
-	this := AnswerToInviteData{}
-	return &this
-}
-
-// GetId returns the Id field value
-func (o *AnswerToInviteData) GetId() string {
-	if o == nil {
-		var ret string
-		return ret
-	}
-
-	return o.Id
-}
-
-// GetIdOk returns a tuple with the Id field value
-// and a boolean to check if the value has been set.
-func (o *AnswerToInviteData) GetIdOk() (*string, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Id, true
-}
-
-// SetId sets field value
-func (o *AnswerToInviteData) SetId(v string) {
-	o.Id = v
-}
-
-// GetType returns the Type field value
-func (o *AnswerToInviteData) GetType() string {
-	if o == nil {
-		var ret string
-		return ret
-	}
-
-	return o.Type
-}
-
-// GetTypeOk returns a tuple with the Type field value
-// and a boolean to check if the value has been set.
-func (o *AnswerToInviteData) GetTypeOk() (*string, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Type, true
-}
-
-// SetType sets field value
-func (o *AnswerToInviteData) SetType(v string) {
-	o.Type = v
-}
-
-// GetAttributes returns the Attributes field value
-func (o *AnswerToInviteData) GetAttributes() AnswerToInviteDataAttributes {
-	if o == nil {
-		var ret AnswerToInviteDataAttributes
-		return ret
-	}
-
-	return o.Attributes
-}
-
-// GetAttributesOk returns a tuple with the Attributes field value
-// and a boolean to check if the value has been set.
-func (o *AnswerToInviteData) GetAttributesOk() (*AnswerToInviteDataAttributes, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Attributes, true
-}
-
-// SetAttributes sets field value
-func (o *AnswerToInviteData) SetAttributes(v AnswerToInviteDataAttributes) {
-	o.Attributes = v
-}
-
-func (o AnswerToInviteData) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o AnswerToInviteData) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	toSerialize["id"] = o.Id
-	toSerialize["type"] = o.Type
-	toSerialize["attributes"] = o.Attributes
-	return toSerialize, nil
-}
-
-func (o *AnswerToInviteData) UnmarshalJSON(data []byte) (err error) {
-	// This validates that all required properties are included in the JSON object
-	// by unmarshalling the object into a generic map with string keys and checking
-	// that every required field exists as a key in the generic map.
-	requiredProperties := []string{
-		"id",
-		"type",
-		"attributes",
-	}
-
-	allProperties := make(map[string]interface{})
-
-	err = json.Unmarshal(data, &allProperties)
-
-	if err != nil {
-		return err;
-	}
-
-	for _, requiredProperty := range(requiredProperties) {
-		if _, exists := allProperties[requiredProperty]; !exists {
-			return fmt.Errorf("no value given for required property %v", requiredProperty)
-		}
-	}
-
-	varAnswerToInviteData := _AnswerToInviteData{}
-
-	decoder := json.NewDecoder(bytes.NewReader(data))
-	decoder.DisallowUnknownFields()
-	err = decoder.Decode(&varAnswerToInviteData)
-
-	if err != nil {
-		return err
-	}
-
-	*o = AnswerToInviteData(varAnswerToInviteData)
-
-	return err
-}
-
-type NullableAnswerToInviteData struct {
-	value *AnswerToInviteData
-	isSet bool
-}
-
-func (v NullableAnswerToInviteData) Get() *AnswerToInviteData {
-	return v.value
-}
-
-func (v *NullableAnswerToInviteData) Set(val *AnswerToInviteData) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableAnswerToInviteData) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableAnswerToInviteData) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableAnswerToInviteData(val *AnswerToInviteData) *NullableAnswerToInviteData {
-	return &NullableAnswerToInviteData{value: val, isSet: true}
-}
-
-func (v NullableAnswerToInviteData) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableAnswerToInviteData) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
