# resources/model_answer_to_invite_data_attributes.go
@@ -1,159 +1,0 @@
-/*
-cities-svc API
-
-API documentation for cities-svc
-
-API version: 0.1.0
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package resources
-
-import (
-	"encoding/json"
-	"bytes"
-	"fmt"
-)
-
-// checks if the AnswerToInviteDataAttributes type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &AnswerToInviteDataAttributes{}
-
-// AnswerToInviteDataAttributes struct for AnswerToInviteDataAttributes
-type AnswerToInviteDataAttributes struct {
-	// answer to the invite
-	Answer string `json:"answer"`
-}
-
-type _AnswerToInviteDataAttributes AnswerToInviteDataAttributes
-
-// NewAnswerToInviteDataAttributes instantiates a new AnswerToInviteDataAttributes object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewAnswerToInviteDataAttributes(answer string) *AnswerToInviteDataAttributes {
-	this := AnswerToInviteDataAttributes{}
-	this.Answer = answer
-	return &this
-}
-
-// NewAnswerToInviteDataAttributesWithDefaults instantiates a new AnswerToInviteDataAttributes object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewAnswerToInviteDataAttributesWithDefaults() *AnswerToInviteDataAttributes {
-	this := AnswerToInviteDataAttributes{}
-	return &this
-}
-
-// GetAnswer returns the Answer field value
-func (o *AnswerToInviteDataAttributes) GetAnswer() string {
-	if o == nil {
-		var ret string
-		return ret
-	}
-
-	return o.Answer
-}
-
-// GetAnswerOk returns a tuple with the Answer field value
-// and a boolean to check if the value has been set.
-func (o *AnswerToInviteDataAttributes) GetAnswerOk() (*string, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Answer, true
-}
-
-// SetAnswer sets field value
-func (o *AnswerToInviteDataAttributes) SetAnswer(v string) {
-	o.Answer = v
-}
-
-func (o AnswerToInviteDataAttributes) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o AnswerToInviteDataAttributes) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	toSerialize["answer"] = o.Answer
-	return toSerialize, nil
-}
-
-func (o *AnswerToInviteDataAttributes) UnmarshalJSON(data []byte) (err error) {
-	// This validates that all required properties are included in the JSON object
-	// by unmarshalling the object into a generic map with string keys and checking
-	// that every required field exists as a key in the generic map.
-	requiredProperties := []string{
-		"answer",
-	}
-
-	allProperties := make(map[string]interface{})
-
-	err = json.Unmarshal(data, &allProperties)
-
-	if err != nil {
-		return err;
-	}
-
-	for _, requiredProperty := range(requiredProperties) {
-		if _, exists := allProperties[requiredProperty]; !exists {
-			return fmt.Errorf("no value given for required property %v", requiredProperty)
-		}
-	}
-
-	varAnswerToInviteDataAttributes := _AnswerToInviteDataAttributes{}
-
-	decoder := json.NewDecoder(bytes.NewReader(data))
-	decoder.DisallowUnknownFields()
-	err = decoder.Decode(&varAnswerToInviteDataAttributes)
-
-	if err != nil {
-		return err
-	}
-
-	*o = AnswerToInviteDataAttributes(varAnswerToInviteDataAttributes)
-
-	return err
-}
-
-type NullableAnswerToInviteDataAttributes struct {
-	value *AnswerToInviteDataAttributes
-	isSet bool
-}
-
-func (v NullableAnswerToInviteDataAttributes) Get() *AnswerToInviteDataAttributes {
-	return v.value
-}
-
-func (v *NullableAnswerToInviteDataAttributes) Set(val *AnswerToInviteDataAttributes) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableAnswerToInviteDataAttributes) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableAnswerToInviteDataAttributes) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableAnswerToInviteDataAttributes(val *AnswerToInviteDataAttributes) *NullableAnswerToInviteDataAttributes {
-	return &NullableAnswerToInviteDataAttributes{value: val, isSet: true}
-}
-
-func (v NullableAnswerToInviteDataAttributes) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableAnswerToInviteDataAttributes) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
